<resources>
    <string name="app_name">StoreHomie</string>
    <string name="title_activity_map_screen">StoreHomie</string>
    <string name="title_activity_filter_screen">StoreHomie</string>
    <string name="migros">Migros</string>
    <string name="coop">Coop</string>
    <string name="denner">Denner</string>
    <string name="volg">Digitec</string>
    <string name="landi">MagicX</string>
    <string name="suchen">Suchen</string>
    <string name="supermarkt">Supermarkt suchen...</string>
    <string name="button_openFilter">Suchen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google_maps_key">AIzaSyAe4ppb1wudMrHBCXEPbhHHTu8xSFP42T0</string>
</resources>
