<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.zli.storehomie.app.FilterScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/SearchTextbox"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button"
            android:hint="@string/supermarkt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suchen"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/SearchTextbox"
            android:layout_alignParentEnd="true" />

        <TextView
            android:onClick="onSuggestionClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/migros"
            android:id="@+id/SuggestionLabel_migros"
            android:layout_below="@+id/SearchTextbox"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:enabled="true" />

        <TextView
            android:onClick="onSuggestionClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/coop"
            android:id="@+id/Suggestionlabel_Coop"
            android:layout_below="@+id/SuggestionLabel_migros"
            android:layout_alignParentStart="true"
            android:clickable="true" />

        <TextView
            android:onClick="onSuggestionClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/denner"
            android:id="@+id/SuggestionLabel_Denner"
            android:layout_below="@+id/Suggestionlabel_Coop"
            android:layout_alignParentStart="true"
            android:clickable="true" />

        <TextView
            android:onClick="onSuggestionClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/volg"
            android:id="@+id/SuggestionLabel_Volg"
            android:layout_below="@+id/SuggestionLabel_Denner"
            android:layout_alignParentStart="true"
            android:clickable="true" />

        <TextView
            android:onClick="onSuggestionClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/landi"
            android:id="@+id/SuggestionLabel_Landi"
            android:layout_below="@+id/SuggestionLabel_Volg"
            android:layout_alignParentStart="true"
            android:clickable="true" />

    </RelativeLayout>
</RelativeLayout>
